# llmstartj

./: .cursorrules  .dockerignore  .dockerignore.railway  .env.example  .gitignore  COMMIT_GUIDE.md  Dockerfile  Dockerfile.minimal  Dockerfile.original  Dockerfile.railway  Dockerfile.railway.simple  Dockerfile.simple  MODEL_FIX.md  Makefile  QUICK_FIX.md  RAILWAY_DEPLOY.md  RAILWAY_FINAL.md  RAILWAY_FIX.md  README.md  check_data.py  check_deploy.py  check_dockerfiles.py  check_models.py  docker-compose.yml  env.example  pyproject.toml  requirements-minimal.txt  requirements.txt
.github/workflows/: deploy.yml
doc/: product_idea.md  tasklist.md  vision.md
doc/guides/: telegram_bot_creation.md
docs/: cloud_deployment_choice.md  cloud_platforms_research.md  deployment.md  fly_deployment_guide.md  railway_deployment_guide.md  railway_setup_guide.md  railway_simple_deploy.md  render_deployment_guide.md  troubleshooting.md
src/: __init__.py  bot.py
src/handlers/: __init__.py  anime.py  start.py
src/services/: __init__.py  cache_service.py  llm_service.py  pagination_service.py  user_state_service.py
src/utils/: __init__.py  config.py  health_check.py  init_data.py  logger.py  message_utils.py  prompts.py
